[project]
name = "quiz-editor-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
    "duckdb>=1.2.0",
    "duckdb-engine>=0.15.0",
    "fastapi>=0.115.6",
    "markdown2>=2.5.3",
    "pydantic>=2.10.3",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.1"
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-sugar>=1.0.0",
    "ruff>=0.9.6",
]
